--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "businessmaster",
   "version": "1.1.1",
-  "description": "businessMaster: An Ionic project",
+  "description": "BusinessMaster supported by Alexander Huang.",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-uglify": "^2.1.2",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
