--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-splashscreen",
     "cordova-plugin-device",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "phonegap-plugin-barcodescanner"
   ],
   "cordovaPlatforms": []
 }
