--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cordova-plugin-device",
     "ionic-plugin-keyboard",
     "phonegap-plugin-barcodescanner",
-    "cordova-plugin-camera"
+    "cordova-plugin-camera",
+    "cordova-plugin-image-picker"
   ],
   "cordovaPlatforms": []
 }
